Fix switch appearance on Firefox

--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -257,14 +257,15 @@ textarea.form__control {
 }
 
 .form__range::-webkit-slider-thumb {
-  @extend .button--base-raised-light;
   -webkit-appearance: none;
   position: absolute;
   cursor: ew-resize;
   top: 50%;
   border: 0;
-  height: 1.25rem;
-  width: 1.25rem;
+  height: $global-spacing;
+  width: $global-spacing;
+  border-radius: $full-border-radius;
+  background: $base-color;
   border-radius: $full-border-radius;
   transform: translate(0, -50%);
   transition: all 0.24s ease 0s;
@@ -275,9 +276,9 @@ textarea.form__control {
 .form__range::-moz-range-track {
   position: relative;
   width: 100%;
-  height: $base-border-width;
-  background: transparent linear-gradient(to right, $base-font-color, $base-font-color) no-repeat;
-  background-size: 0;
+  height: 0.5rem;
+  background: rgba($base-color, 0.24);
+  border-radius: $full-border-radius;
 }
 
 .form__range::-moz-range-thumb {
